[gd_scene load_steps=14 format=3 uid="uid://dugs0loarftr"]

[ext_resource type="Script" uid="uid://ceekaaqvlk5qa" path="res://scenes/main/title_screen.gd" id="1_c2ksh"]
[ext_resource type="Texture2D" uid="uid://b4ydhiemaff0i" path="res://Background/background1.png" id="1_h1nep"]
[ext_resource type="Texture2D" uid="uid://cfbk2h5hgk6vn" path="res://Background/background4.png" id="2_c2ksh"]
[ext_resource type="Texture2D" uid="uid://dfeirpj5jcrki" path="res://artwork/Bg1test.png" id="3_kkwvi"]
[ext_resource type="PackedScene" uid="uid://d2wjbrlbivhcg" path="res://scenes/main/options.tscn" id="4_a5rkg"]
[ext_resource type="AudioStream" uid="uid://07uran5fhmku" path="res://assets/music/Intro Song Slide In.ogg" id="6_qn2vq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_l4ihj"]
texture = ExtResource("1_h1nep")
modulate_color = Color(0.758192, 0.758192, 0.758192, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qn2vq"]
texture = ExtResource("3_kkwvi")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kkwvi"]
texture = ExtResource("2_c2ksh")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hsu5g"]
bg_color = Color(0.899258, 0.899258, 0.899258, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.337255)
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h1nep"]
bg_color = Color(0.899258, 0.899258, 0.899258, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.337255)
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c2ksh"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.337255)
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ibkxm"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.337255)
shadow_size = 10

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c2ksh")

[node name="BackgroundImage1" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_l4ihj")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 1276.0
offset_bottom = 721.0
theme_override_styles/panel = SubResource("StyleBoxTexture_qn2vq")

[node name="BackgroundImage2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_kkwvi")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -165.0
offset_top = -231.0
offset_right = 166.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 15

[node name="StartGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Exit")
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxFlat_hsu5g")
theme_override_styles/hover = SubResource("StyleBoxFlat_h1nep")
theme_override_styles/pressed = SubResource("StyleBoxFlat_c2ksh")
theme_override_styles/normal = SubResource("StyleBoxFlat_ibkxm")
text = "Start Game"
metadata/_edit_group_ = true

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxFlat_hsu5g")
theme_override_styles/hover = SubResource("StyleBoxFlat_h1nep")
theme_override_styles/pressed = SubResource("StyleBoxFlat_c2ksh")
theme_override_styles/normal = SubResource("StyleBoxFlat_ibkxm")
text = "Options
"
metadata/_edit_group_ = true

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../StartGame")
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxFlat_hsu5g")
theme_override_styles/hover = SubResource("StyleBoxFlat_h1nep")
theme_override_styles/pressed = SubResource("StyleBoxFlat_c2ksh")
theme_override_styles/normal = SubResource("StyleBoxFlat_ibkxm")
text = "Exit"
metadata/_edit_group_ = true

[node name="GameTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -299.0
offset_top = 192.0
offset_right = 299.0
offset_bottom = 329.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 100
text = "Dark Tree"
horizontal_alignment = 1

[node name="TeamName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_top = -34.0
offset_right = 87.0
offset_bottom = -15.0
grow_vertical = 0
theme_override_font_sizes/font_size = 13
text = "Team Berry"

[node name="Version" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -55.0
offset_top = -28.0
offset_right = 18.0
offset_bottom = 11.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 13
text = "V0.01
"

[node name="Options" parent="." instance=ExtResource("4_a5rkg")]
visible = false
layout_mode = 1
offset_top = 129.0
offset_bottom = 129.0

[node name="music title screen" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_qn2vq")
volume_db = -18.739
autoplay = true

[connection signal="pressed" from="VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
